<resources>
    <string name="app_name">Horta Viva</string>
    <string name="barra_de_acessibilidade">Barra de Acessibilidade</string>
    <string name="nome_colaborador">Bruna da Silva</string>
    <string name="nome_cargo">Analista de RH</string>
    <string name="title_activity_teste">teste</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="button_activity_colaborador">Acessar</string>
    <string name="button_activity_empresa">Empresa</string>
    <string name="title_homepage_horta_viva">Horta Viva</string>
    <string name="title_login_activity">Acesso do colaborador</string>
    <string name="label_email_login_activity">E-mail</string>
    <string name="hint_email_loginActivity">Seu E-mail aqui</string>
    <string name="label_senha_loginActivity">Senha</string>
    <string name="hint_senha_loginActivity">Sua Senha aqui</string>
    <string name="button_esqueceu_sua_senha">Esqueceu sua senha?</string>
    <string name="button_acessar_colaboradorActivity">Acessar</string>
    <string name="button_cadastroActivity">Não tem cadastro? Cadastre-se aqui</string>
    <string name="button_voltar">Voltar</string>
    <string name="title_empresa_colaborador">Empresa S.A.</string>
    <string name="base_foto_perfil_colaboradorActivity">Base Foto Perfil</string>
    <string name="foto_perfil_colaboradorActivity">Foto Perfil</string>
    <string name="title_carteira_colaboradorActivity">Carteira</string>
    <string name="valor_carteira_colaboradorActivity">R$ 350/800</string>
    <string name="title_consumo_colaboradorActivity">Consumo</string>
    <string name="data_consumo_primeiro_mes">Mai/2022</string>
    <string name="data_consumo_segundo_mes">Jun/2022</string>
    <string name="data_consumo_terceiro_mes">Jul/2022</string>
    <string name="data_consumo_quarto_mes">Ago/2022</string>
    <string name="data_consumo_mes_recente">Set/2022</string>
    <string name="button_seusDados_colaboradorActivity">Seus Dados</string>
    <string name="title_seus_pedidos">Seus Pedidos</string>
    <string name="button_ordenar_pedidos">Ordenar</string>
    <string name="descricao_imagem_cesta_mais_recente">Imagem Cesta Individual</string>
    <string name="title_cesta_mais_recente">Cesta Individual</string>
    <string name="tipo_cesta_mais_recente">Frutas</string>
    <string name="valor_cesta_mais_recente">R$ 29,00</string>
    <string name="button_comprar_novamente">Comprar Novamente</string>
    <string name="descricao_imagem_cesta_menos_recente">Imagem Cesta Familia</string>
    <string name="title_cesta_menos_recente">Cesta Família</string>
    <string name="tipo_cesta_menos_recente">Mista</string>
    <string name="valor_cesta_menos_recente">R$ 79,00</string>
    <string name="button_agendado">Agendado</string>
    <string name="button_ver_tudo">Ver Tudo</string>
    <string name="button_logout_homeActivity">Logout</string>
    <string name="title_atalhos">Atalhos</string>
    <string name="button_agendamentos_home">Agendamentos</string>
    <string name="button_loja_home">Loja</string>
    <string name="button_perfil_home">Perfil</string>
    <string name="button_mais_home">Mais</string>
    <string name="title_card_cesta_tamanho_familia">Cesta tamanho família</string>
    <string name="button_eu_quero">Eu Quero</string>
    <string name="title_card_cesta_de_frutas">Cesta de frutas</string>
    <string name="title_card_cesta_mista">Cesta mista</string>
    <string name="descricao_imagem_cesta_tamanho_familia">Cesta tamanho familia</string>
    <string name="descricao_imagem_cesta_mista">Cesta mista</string>
    <string name="identificador_home">Home</string>
    <string name="identificador_loja">Loja</string>
    <string name="identificador_perfil">Perfil</string>
    <string name="identificador_agendamento">Agendamento</string>
    <string name="title_activity_bottom_fragment">BottomFragment</string>
    <string-array name="DiadoMes">
        <item>01</item>
        <item>02</item>
        <item>03</item>
        <item>04</item>
        <item>05</item>
        <item>06</item>
        <item>07</item>
        <item>08</item>
        <item>09</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
    </string-array>

</resources>