<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

<androidx.core.widget.NestedScrollView
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">


<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".home">


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/barradeacessibilidade"
        style="@style/barradeacessibilidade"
        android:background="@drawable/barradeacessibilidade"
        android:text="@string/barra_de_acessibilidade"
        android:textColor="@color/white"
        android:textSize="13sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/identificador_home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="24dp"
        android:background="#00FFFFFF"
        android:textSize="18sp"
        android:textColor="@color/hortaviva"
        android:text="@string/identificador_home"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/barradeacessibilidade"
        app:drawableStartCompat="@drawable/ic_home"
        android:drawablePadding="10dp"/>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dp"
        android:background="#00FFFFFF"
        android:textColor="@color/hortaviva"
        android:drawableStart="@drawable/ic_baseline_arrow_back_2"
        android:textStyle="bold"
        android:text="@string/button_logout_homeActivity"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/identificador_home" />

    <TextView
        android:id="@+id/txt_empresa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="18dp"
        android:text="@string/title_empresa_colaborador"
        android:textColor="@color/hortaviva"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/identificador_home"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/title_atalhos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:text="@string/title_atalhos"
        android:textStyle="bold"
        android:textColor="@color/hortaviva"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_logout" />

    <TextView
        android:id="@+id/icon_agendamentos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginStart="40dp"
        android:text="@string/button_agendamentos_home"
        android:textColor="@color/hortaviva"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_atalhos"
        app:drawableTopCompat="@drawable/agendamento" />

    <TextView
        android:id="@+id/icon_loja"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="50dp"
        android:text="@string/button_loja_home"
        android:textColor="@color/hortaviva"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_atalhos"
        app:drawableTopCompat="@drawable/icon_loja"/>

    <TextView
        android:id="@+id/icon_perfil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginStart="40dp"
        android:text="@string/button_perfil_home"
        android:textColor="@color/hortaviva"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="@id/icon_agendamentos"
        app:layout_constraintTop_toBottomOf="@+id/icon_agendamentos"
        app:drawableTopCompat="@drawable/icon_perfil" />

    <TextView
        android:id="@+id/icon_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="40dp"
        android:text="@string/button_mais_home"
        android:textColor="@color/hortaviva"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@id/icon_loja"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/icon_loja"
        app:drawableTopCompat="@drawable/icon_add" />

    <View
        android:id="@+id/baseboxcompra2"
        android:layout_width="match_parent"
        android:layout_height="260dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/baseboxcompra"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/icon_perfil" />


    <TextView
        android:id="@+id/title_cesta_familia_home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_card_cesta_tamanho_familia"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textColor="@color/hortaviva"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toTopOf="@id/baseboxcompra2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ImageView
        android:id="@+id/imagem_cesta_familia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/title_cesta_familia_home"
        android:background="@drawable/imagem_cesta_tamanho_familia"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@string/descricao_imagem_cesta_tamanho_familia" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_compra_home1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button4"
        android:layout_marginStart="80dp"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="80dp"
        android:text="@string/button_eu_quero"
        android:textColor="@color/hortaviva"

        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/baseboxcompra2"
        />

    <View
        android:id="@+id/baseboxcompra3"
        android:layout_width="match_parent"
        android:layout_height="260dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/baseboxcompra"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/baseboxcompra2" />


    <TextView
        android:id="@+id/title_cesta_frutas_home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_card_cesta_de_frutas"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textColor="@color/hortaviva"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toTopOf="@id/baseboxcompra3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ImageView
        android:id="@+id/imagem_cesta_frutas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/title_cesta_frutas_home"
        android:background="@drawable/imagem_cesta_frutas"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_compra_home2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button4"
        android:layout_marginStart="80dp"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="80dp"
        android:text="@string/button_eu_quero"
        android:textColor="@color/hortaviva"

        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/baseboxcompra3"
        />


    <View
        android:id="@+id/baseboxcompra4"
        android:layout_width="match_parent"
        android:layout_height="260dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/baseboxcompra"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/baseboxcompra3" />


    <TextView
        android:id="@+id/title_cesta_mista_home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_card_cesta_mista"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textColor="@color/hortaviva"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toTopOf="@id/baseboxcompra4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ImageView
        android:id="@+id/imagem_cesta_mista"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/title_cesta_mista_home"
        android:background="@drawable/imagem_cesta_mista"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@string/descricao_imagem_cesta_mista" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_compra_home3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button4"
        android:layout_marginStart="80dp"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="80dp"
        android:text="@string/button_eu_quero"
        android:textColor="@color/hortaviva"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/baseboxcompra4"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="80dp"
        app:layout_constraintTop_toBottomOf="@+id/button_compra_home3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="bottom"
        android:background="?android:attr/windowBackground"
        app:itemIconTint="@color/hortaviva"
        app:itemTextColor="@color/hortaviva"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/menu"
        tools:layout_editor_absoluteY="681dp" />
</androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>
</FrameLayout>