<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".loja">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/barradeacessibilidade"
            style="@style/barradeacessibilidade"
            android:background="@drawable/barradeacessibilidade"
            android:text="@string/barra_de_acessibilidade"
            android:textColor="@color/white"
            android:textSize="13sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/identificador_agendamento"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="24dp"
            android:background="#00FFFFFF"
            android:textSize="18sp"
            android:textColor="@color/hortaviva"
            android:text="@string/identificador_agendamento"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/barradeacessibilidade"
            app:drawableStartCompat="@drawable/agendamento24dp"
            android:drawablePadding="10dp"/>

        <TextView
            android:id="@+id/txt_empresa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="18dp"
            android:text="@string/title_empresa_colaborador"
            android:textColor="@color/hortaviva"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/identificador_agendamento"
            app:layout_constraintEnd_toEndOf="parent"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:background="#00FFFFFF"
            android:drawableStart="@drawable/ic_baseline_arrow_back"
            android:text="@string/button_voltar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/identificador_agendamento" />

        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/bottom_navigation"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="bottom"
            android:background="?android:attr/windowBackground"
            app:itemIconTint="@color/hortaviva"
            app:itemTextColor="@color/hortaviva"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:menu="@menu/menu"
            tools:layout_editor_absoluteY="681dp" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>